fullscreen, error fix and wrapping

--- a/css/macro-editor.css
+++ b/css/macro-editor.css
@@ -9,3 +9,39 @@
     width: 100%;
     height: calc(100% - 2rem);
 }
+
+.macro-editor.fullscreen {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: calc(100% - 10rem);
+    height: calc(100% - 10rem);
+    margin: 5rem;
+}
+
+.macro-editor-expand {
+    position: absolute;
+    filter: opacity(0.4);
+    border-radius: .5em;
+    height: 2em;
+    width: 2em;
+    margin-left: calc(100% - 3.4em);
+    margin-top: 2.3em;
+    z-index: 199;
+    background: url(/ui/parchment.jpg);
+    float: right;
+    padding: unset;
+}
+
+.macro-editor-expand.fullscreen {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    margin-left: calc(100% - 7.1rem);
+    margin-top: 5.3rem;
+}
+
+.macro-editor-expand i.fas.fa-expand-alt,
+.macro-editor-expand i.fas.fa-compress-alt {
+    margin: unset;
+}
